# ds-unidad-2-actividad-2-listasdobleenlazadas-jfop-afk

./: README.md
PracticaArduino2/: CMakeLists.txt  ListaDeCarga.cpp  ListaDeCarga.h  RotorDeMapeo.cpp  RotorDeMapeo.h  SerialReader.cpp  SerialReader.h  TramaBase.h  TramaLoad.cpp  TramaLoad.h  TramaMap.cpp  TramaMap.h  arduino_transmitter.ino  main.cpp
